# ENHYDRA

./: .Rhistory  .gitignore  README.md  ecoli_code_config  ecoli_diff_project_config  ecoli_project_config  ecoli_project_config_all  ecoli_project_config_all_identity  ecoli_project_config_all_identity_non_patho_anchor  ecoli_project_config_all_identity_patho_anchor  ecoli_project_config_all_non_patho_anchor  ecoli_project_config_all_patho_anchor  ecoli_project_config_all_zscore  ecoli_project_config_all_zscore_non_patho_anchor  ecoli_project_config_all_zscore_patho_anchor  ecoli_project_config_list_patho_anchor  ecoli_project_config_lists_identity_non_patho_anchor  ecoli_project_config_lists_identity_patho_anchor  ecoli_project_config_lists_zscore_patho_anchor  primate_project_config_identity  pyproject.toml  repomix-output.xml  test_code_config  test_project_config  tmp.txt
enhydra/: README.md  __init__.py  alignment.py  cli.py  differential.py  exceptions.py  filtering.py  gsea.py  init.py  io.py  orthofinder.py  plotting.py  report.py  report_old.py  tables.py  utils.py
enhydra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_data/input/: OG000001  OG000005
tests/: E_coli_genomes.tsv  E_coli_non_pathogenic.txt  E_coli_pathogenic.txt  build_gmt.py  build_gmt_interproscan.py  generate_test_data.py  prepare_ecoli_proteomes.py  reconstruct_orthogroups.py  remove_pseudogenes.py  test_config_file  test_differnetial.py  test_filtering.py  test_gsea.py  test_integration.py  test_io.py  test_tables.py
(+22 files in other folders)
